Ellipsis changes (mainly typos & grammar)

--- a/docs/src/content/docs/osb/commands/activities.mdx
+++ b/docs/src/content/docs/osb/commands/activities.mdx
@@ -107,7 +107,7 @@ _No parameters._
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `potion_name` | `string` | Yes | The name of the potion. | - |
-| `dose` | `integer` | No | The dosage to decant them too. (default 4) | - |
+| `dose` | `integer` | No | The dosage to decant them to. (default 4) | - |
 
 ## /activities charge
 
