--- a/docs/src/content/docs/osb/commands/bossrecords.mdx
+++ b/docs/src/content/docs/osb/commands/bossrecords.mdx
@@ -16,4 +16,4 @@ Shows your OSRS boss records.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `rsn` | `string` | Yes | The runescape username you want to check. | - |
+| `rsn` | `string` | Yes | The RuneScape username you want to check. | - |
