--- a/docs/src/content/docs/osb/commands/casket.mdx
+++ b/docs/src/content/docs/osb/commands/casket.mdx
@@ -6,7 +6,7 @@ title: "/casket"
 
 [← Back to commands index](./)
 
-Simulate opening lots of clues caskets.
+Simulate opening lots of clue caskets.
 
 **Usage**
 
