--- a/docs/src/content/docs/osb/commands/clues.mdx
+++ b/docs/src/content/docs/osb/commands/clues.mdx
@@ -16,7 +16,7 @@ See your OSRS clue scores.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `rsn` | `string` | Yes | Your runescape username. | - |
+| `rsn` | `string` | Yes | Your RuneScape username. | - |
 
 **Examples**
 
