--- a/docs/src/content/docs/osb/commands/gamble.mdx
+++ b/docs/src/content/docs/osb/commands/gamble.mdx
@@ -19,7 +19,7 @@ Partake in various gambling activities.
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `item` | `string` | No | The item you wish to gamble. | - |
-| `autoconfirm` | `boolean` | No | Don't ask confirmation message | - |
+| `autoconfirm` | `boolean` | No | Don't ask for confirmation | - |
 
 ## /gamble dice
 
@@ -93,4 +93,4 @@ Partake in various gambling activities.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `user` | `user` | Yes | The user to give a random item too. | - |
+| `user` | `user` | Yes | The user to give a random item to. | - |
