--- a/docs/src/content/docs/osb/commands/ge.mdx
+++ b/docs/src/content/docs/osb/commands/ge.mdx
@@ -18,7 +18,7 @@ Exchange grandly with other players on the bot!
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `item` | `string` | Yes | The item you want to pick. | - |
+| `item` | `string` | Yes | The item you want to buy. | - |
 | `quantity` | `string` | Yes | The quantity of the item to exchange (e.g. 7, 5k, 10m). | - |
 | `price` | `string` | Yes | The price to exchange each item at. (e.g. 7, 5k, 10m). | - |
 
