--- a/docs/src/content/docs/osb/commands/gear.mdx
+++ b/docs/src/content/docs/osb/commands/gear.mdx
@@ -18,7 +18,7 @@ Manage, equip, unequip your gear.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `gear_setup` | `string` | Yes | The gear setup want to select. | - |
+| `gear_setup` | `string` | Yes | The gear setup you want to select. | - |
 | `items` | `string` | No | A list of equippable items to equip. | - |
 | `item` | `string` | No | The item you want to equip. | - |
 | `preset` | `string` | No | The gear preset you want to select. | - |
@@ -35,7 +35,7 @@ Manage, equip, unequip your gear.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `gear_setup` | `string` | Yes | The gear setup want to select. | - |
+| `gear_setup` | `string` | Yes | The gear setup you want to select. | - |
 | `item` | `string` | No | The item you want to unequip. | - |
 | `all` | `boolean` | No | Unequip everything in this setup? | - |
 
