--- a/docs/src/content/docs/osb/commands/gearpresets.mdx
+++ b/docs/src/content/docs/osb/commands/gearpresets.mdx
@@ -30,7 +30,7 @@ Manage, equip, unequip your gear presets.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `gear_setup` | `string` | Yes | The gear setup want to select. | - |
+| `gear_setup` | `string` | Yes | The gear setup you want to select. | - |
 | `preset` | `string` | Yes | The gear preset you want to select. | - |
 
 ## /gearpresets create
