--- a/docs/src/content/docs/osb/commands/giveaway.mdx
+++ b/docs/src/content/docs/osb/commands/giveaway.mdx
@@ -6,7 +6,7 @@ title: "/giveaway"
 
 [← Back to commands index](./)
 
-Giveaway items from your ban to other players.
+Giveaway items from your bank to other players.
 
 ## /giveaway start
 
