--- a/docs/src/content/docs/osb/commands/hunt.mdx
+++ b/docs/src/content/docs/osb/commands/hunt.mdx
@@ -19,7 +19,7 @@ Hunt creatures with the Hunter skill.
 | `name` | `string` | Yes | The creature you want to hunt. | - |
 | `quantity` | `integer` | No | The quantity you want to hunt (optional). | - |
 | `hunter_potion` | `boolean` | No | Do you want to use Hunter potions for this trip? | - |
-| `stamina_potions` | `boolean` | No | Use stam potions for Herbiboar? | - |
+| `stamina_potions` | `boolean` | No | Use stamina potions for Herbiboar? | - |
 
 **Examples**
 
