--- a/docs/src/content/docs/osb/commands/index.mdx
+++ b/docs/src/content/docs/osb/commands/index.mdx
@@ -23,7 +23,7 @@ Browse command docs by top-level command, or use the search below to jump to a s
 <li data-name="build" data-description="Sends your minion to train Construction by building things."><a href="./build">/build</a> — Sends your minion to train Construction by building things.</li>
 <li data-name="buy" data-description="Allows you to purchase items."><a href="./buy">/buy</a> — Allows you to purchase items.</li>
 <li data-name="ca" data-description="Combat Achievements"><a href="./ca">/ca</a> — Combat Achievements</li>
-<li data-name="casket" data-description="Simulate opening lots of clues caskets."><a href="./casket">/casket</a> — Simulate opening lots of clues caskets.</li>
+<li data-name="casket" data-description="Simulate opening lots of clue caskets."><a href="./casket">/casket</a> — Simulate opening lots of clue caskets.</li>
 <li data-name="choose" data-description="Have the bot make a choice from a list of things."><a href="./choose">/choose</a> — Have the bot make a choice from a list of things.</li>
 <li data-name="chop" data-description="Chop logs using the Woodcutting skill."><a href="./chop">/chop</a> — Chop logs using the Woodcutting skill.</li>
 <li data-name="cl" data-description="See your Collection Log."><a href="./cl">/cl</a> — See your Collection Log.</li>
@@ -48,7 +48,7 @@ Browse command docs by top-level command, or use the search below to jump to a s
 <li data-name="gear" data-description="Manage, equip, unequip your gear."><a href="./gear">/gear</a> — Manage, equip, unequip your gear.</li>
 <li data-name="gearpresets" data-description="Manage, equip, unequip your gear presets."><a href="./gearpresets">/gearpresets</a> — Manage, equip, unequip your gear presets.</li>
 <li data-name="gift" data-description="Create gifts for other users, or open one you received."><a href="./gift">/gift</a> — Create gifts for other users, or open one you received.</li>
-<li data-name="giveaway" data-description="Giveaway items from your ban to other players."><a href="./giveaway">/giveaway</a> — Giveaway items from your ban to other players.</li>
+<li data-name="giveaway" data-description="Giveaway items from your bank to other players."><a href="./giveaway">/giveaway</a> — Giveaway items from your bank to other players.</li>
 <li data-name="gp" data-description="See your current GP balance."><a href="./gp">/gp</a> — See your current GP balance.</li>
 <li data-name="help" data-description="Get information and help with the bot."><a href="./help">/help</a> — Get information and help with the bot.</li>
 <li data-name="hunt" data-description="Hunt creatures with the Hunter skill."><a href="./hunt">/hunt</a> — Hunt creatures with the Hunter skill.</li>
@@ -128,7 +128,7 @@ searchInput?.addEventListener("input", filterCommands);
 
 ### C
 - [/ca](./ca) — Combat Achievements
-- [/casket](./casket) — Simulate opening lots of clues caskets.
+- [/casket](./casket) — Simulate opening lots of clue caskets.
 - [/choose](./choose) — Have the bot make a choice from a list of things.
 - [/chop](./chop) — Chop logs using the Woodcutting skill.
 - [/cl](./cl) — See your Collection Log.
@@ -159,7 +159,7 @@ searchInput?.addEventListener("input", filterCommands);
 - [/gear](./gear) — Manage, equip, unequip your gear.
 - [/gearpresets](./gearpresets) — Manage, equip, unequip your gear presets.
 - [/gift](./gift) — Create gifts for other users, or open one you received.
-- [/giveaway](./giveaway) — Giveaway items from your ban to other players.
+- [/giveaway](./giveaway) — Giveaway items from your bank to other players.
 - [/gp](./gp) — See your current GP balance.
 
 ### H
