--- a/docs/src/content/docs/osb/commands/k.mdx
+++ b/docs/src/content/docs/osb/commands/k.mdx
@@ -21,7 +21,7 @@ Send your minion to kill things.
 | `method` | `string` | No | If you want to cannon/barrage/burst. | - |
 | `show_info` | `boolean` | No | Show information on this monster. | - |
 | `wilderness` | `boolean` | No | If you want to kill the monster in the wilderness. | - |
-| `solo` | `boolean` | No | Solo (if its a group boss) | - |
+| `solo` | `boolean` | No | Solo (if it's a group boss) | - |
 
 **Examples**
 
