--- a/docs/src/content/docs/osb/commands/kc.mdx
+++ b/docs/src/content/docs/osb/commands/kc.mdx
@@ -16,7 +16,7 @@ See your OSRS kc for a monster/boss.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `rsn` | `string` | Yes | The runescape username to check | - |
+| `rsn` | `string` | Yes | The RuneScape username to check | - |
 | `boss` | `string` | Yes | The boss you want to check | - |
 
 **Examples**
