--- a/docs/src/content/docs/osb/commands/lb.mdx
+++ b/docs/src/content/docs/osb/commands/lb.mdx
@@ -90,7 +90,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `course` | `string` | Yes | The particular creature you want to check. | - |
+| `course` | `string` | Yes | The particular course you want to check. | - |
 
 ## /lb gp
 
