--- a/docs/src/content/docs/osb/commands/lvl.mdx
+++ b/docs/src/content/docs/osb/commands/lvl.mdx
@@ -16,7 +16,7 @@ See a level in your OSRS stats.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `rsn` | `string` | Yes | The runescape username to check | - |
+| `rsn` | `string` | Yes | The RuneScape username to check | - |
 | `skill` | `string` | Yes | The skill you want to select. | - |
 
 **Examples**
