--- a/docs/src/content/docs/osb/commands/minion.mdx
+++ b/docs/src/content/docs/osb/commands/minion.mdx
@@ -89,7 +89,7 @@ _No parameters._
 | --- | --- | --- | --- | --- |
 | `item` | `string` | Yes | The item you want to use. | - |
 | `skill` | `string` | Yes | The skill you want to use the item on. | - |
-| `quantity` | `integer` | No | You quantity you want to use. | - |
+| `quantity` | `integer` | No | The quantity you want to use. | - |
 
 ## /minion cancel
 
