--- a/docs/src/content/docs/osb/commands/pay.mdx
+++ b/docs/src/content/docs/osb/commands/pay.mdx
@@ -16,5 +16,5 @@ Send GP to another user.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `user` | `user` | Yes | The user you want to send the GP too. | - |
+| `user` | `user` | Yes | The user you want to send the GP to. | - |
 | `amount` | `string` | Yes | The amount you want to send. (e.g. 100k, 1m, 2.5b, 5*100m) | - |
