--- a/docs/src/content/docs/osb/commands/rp.mdx
+++ b/docs/src/content/docs/osb/commands/rp.mdx
@@ -59,7 +59,7 @@ Admin tools second set
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `user` | `user` | Yes | The user. | - |
-| `gear_setup` | `string` | No | The gear setup want to select. | - |
+| `gear_setup` | `string` | No | The gear setup you want to select. | - |
 | `all` | `boolean` | No | Unequip all gear slots | - |
 | `pet` | `boolean` | No | Unequip pet also? | - |
 
