--- a/docs/src/content/docs/osb/commands/trade.mdx
+++ b/docs/src/content/docs/osb/commands/trade.mdx
@@ -18,7 +18,7 @@ Allows you to trade items with other players.
 | --- | --- | --- | --- | --- |
 | `user` | `user` | Yes | The user you want to trade items with. | - |
 | `send` | `string` | No | The items you want to send to the other player. | - |
-| `receive` | `string` | No | The items you want to receieve from the other player. | - |
+| `receive` | `string` | No | The items you want to receive from the other player. | - |
 | `price` | `string` | No | A shortcut for adding GP to the received items. | - |
 | `filter` | `string` | No | The filter you want to use. | - |
 | `search` | `string` | No | An optional search of items by name. | - |
