--- a/docs/src/content/docs/osb/commands/xp.mdx
+++ b/docs/src/content/docs/osb/commands/xp.mdx
@@ -16,7 +16,7 @@ See your OSRS xp.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `rsn` | `string` | Yes | The runescape username to check | - |
+| `rsn` | `string` | Yes | The RuneScape username to check | - |
 | `to_99` | `boolean` | No | Only show xp remaining until level 99. | - |
 
 **Examples**
